Add Debug page link to navigation

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,13 +18,14 @@
         ultrasuite
       </a>
     </section>
-    <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end" role="toolbar">
-      <a class="mdc-button" href="/">Dashboard</a>
-      <a class="mdc-button" href="/upload">Upload Data</a>
-      <a class="mdc-button" href="/sku-map">SKU Map</a>
-      <a class="mdc-button" href="/monthly-report">Reports</a>
-      <a class="mdc-button" href="/settings">Settings</a>
-    </section>
+      <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end" role="toolbar">
+        <a class="mdc-button" href="/">Dashboard</a>
+        <a class="mdc-button" href="/upload">Upload Data</a>
+        <a class="mdc-button" href="/sku-map">SKU Map</a>
+        <a class="mdc-button" href="/monthly-report">Reports</a>
+        <a class="mdc-button" href="/debug">Debug</a>
+        <a class="mdc-button" href="/settings">Settings</a>
+      </section>
   </div>
 </header>
 <section class="section pt-0">
