Apply Material style guidelines

--- a/templates/debug.html
+++ b/templates/debug.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="mdc-card">
   <div class="card-content">
-    <h2 class="title is-4">Debug Summary: Transactions by Month</h2>
+    <h2 class="title is-4">Debug summary: transactions by month</h2>
     <table class="table is-fullwidth is-bordered">
     <thead>
       <tr><th>Month</th><th>Transaction Count</th><th>Total Amount</th></tr>
