--- a/templates/sku_map.html
+++ b/templates/sku_map.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div class="mdc-card">
   <div class="card-content">
-    <h2 class="title is-4 mb-4">SKU Alias Mapping</h2>
+    <h2 class="title is-4 mb-4">SKU alias mapping</h2>
     <div class="buttons tab-buttons mb-4" id="mapTabs">
       <button type="button" class="mdc-button mdc-button--raised is-active" data-target="map">Mapping</button>
       <button type="button" class="mdc-button mdc-button--raised" data-target="unmapped">Unmapped</button>
@@ -59,8 +59,8 @@
         </div>
         {% endfor %}
         <div class="buttons mb-5">
-          <button class="mdc-button mdc-button--raised" type="submit" name="merge" value="1">Merge Selected</button>
-          <button class="mdc-button mdc-button--raised" type="submit" name="save" value="1">Save Changes</button>
+          <button class="mdc-button mdc-button--raised" type="submit" name="merge" value="1">Merge selected</button>
+          <button class="mdc-button mdc-button--raised" type="submit" name="save" value="1">Save changes</button>
         </div>
       </form>
     </div>
@@ -84,7 +84,7 @@
           {% endfor %}
           </tbody>
         </table>
-        <button class="mdc-button mdc-button--raised" type="submit" name="merge_suggestions" value="1">Merge Selected</button>
+        <button class="mdc-button mdc-button--raised" type="submit" name="merge_suggestions" value="1">Merge selected</button>
       </form>
       {% else %}
       <p>No suggestions available.</p>
