--- a/templates/upload.html
+++ b/templates/upload.html
@@ -3,18 +3,18 @@
 {% block content %}
 <div class="mdc-card">
   <header class="card-header">
-    <p class="card-header-title">Upload Shopify & QBO Files</p>
+    <p class="card-header-title">Upload Shopify and QuickBooks Online files</p>
   </header>
   <div class="card-content">
     <form method="post" enctype="multipart/form-data">
       <div class="field mb-4">
-        <label class="label">Shopify CSV</label>
+        <label class="label">Shopify CSV file</label>
         <div class="control">
           <input type="file" class="input" name="shopify">
         </div>
       </div>
       <div class="field mb-4">
-        <label class="label">QBO Excel</label>
+        <label class="label">QuickBooks Excel file</label>
         <div class="control">
           <input type="file" class="input" name="qbo">
         </div>
