--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -25,7 +25,7 @@
   <div class="column is-half mb-5">
     <div class="mdc-card">
       <header class="card-header">
-        <p class="card-header-title">SKU Summary</p>
+        <p class="card-header-title">SKU summary</p>
       </header>
       <div class="card-content p-0">
         <table class="table is-fullwidth is-narrow">
@@ -41,6 +41,6 @@
   </div>
 </div>
 <div class="has-text-right">
-<a href="/monthly-report" class="mdc-button mdc-button--raised">📊 View Reports</a>
+<a href="/monthly-report" class="mdc-button mdc-button--raised">📊 View reports</a>
 </div>
 {% endblock %}
