--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,8 +19,8 @@
         </a>
         <div class="nav-links">
           <a class="mdc-button" href="/">Dashboard</a>
-          <a class="mdc-button" href="/upload">Upload Data</a>
-          <a class="mdc-button" href="/sku-map">SKU Map</a>
+          <a class="mdc-button" href="/upload">Upload data</a>
+          <a class="mdc-button" href="/sku-map">SKU map</a>
           <a class="mdc-button" href="/monthly-report">Reports</a>
           <a class="mdc-button" href="/debug">Debug</a>
           <a class="mdc-button" href="/settings">Settings</a>
