--- a/templates/sku_map.html
+++ b/templates/sku_map.html
@@ -9,7 +9,7 @@
       <button type="button" class="mdc-button mdc-button--raised" data-target="merged">Merged</button>
       <button type="button" class="mdc-button mdc-button--raised" data-target="sug">Suggestions</button>
     </div>
-    <div id="map">
+    <div id="map" class="tab-pane">
       <input type="text" id="searchBox" class="input mb-4" placeholder="Search SKUs">
       <form method="POST">
         <input type="hidden" id="merge_target" name="merge_target" value="">
@@ -250,7 +250,9 @@
     var field = input.closest('.alias-field');
     function render() {
       container.innerHTML = '';
-      var aliases = input.value.split(',').map(function(a){ return a.trim(); }).filter(Boolean);
+      var aliases = Array.from(new Set(
+        input.value.split(',').map(function(a){ return a.trim(); }).filter(Boolean)
+      ));
       aliases.forEach(function(a) {
         var tag = document.createElement('span');
         tag.className = 'tag is-info is-light';
