--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -29,11 +29,11 @@
       </header>
       <div class="card-content p-0">
         <table class="table is-fullwidth is-narrow">
-          <thead><tr><th>Canonical SKU</th><th># of Aliases</th></tr></thead>
+          <thead><tr><th>Type</th><th># of SKUs</th></tr></thead>
           <tbody>
           {% for row in sku_stats %}
-            <tr><td>{{ row.canonical_sku }}</td><td>{{ row.alias_count }}</td></tr>
-            {% endfor %}
+            <tr><td>{{ row.type }}</td><td>{{ row.sku_count }}</td></tr>
+          {% endfor %}
           </tbody>
         </table>
       </div>
